@@ -169,7 +169,8 @@ static void	count_lines (const char *);
 static void	scan_define_options (const char *);
 static void	copy_word_in_quotes (char ** const);
 static void	copy_two_words_in_quotes (char ** const, char ** const);
-static void	add_synonym (const int);
+static void	add_synonym (const int, const int);
+static void	make_synonym (void);
 static void *	copy_literal (cb_tree l);
 
 %}
@@ -239,33 +240,35 @@ static void *	copy_literal (cb_tree l);
 	cobc_free (word);
 }
 
+<*>^[ ]?"#ADDSYN-STD".*\n {
+	add_synonym (1, 0);
+}
 <*>^[ ]?"#ADDSYN".*\n {
-	add_synonym (0);
+	add_synonym (0, 0);
 }
 
 <*>^[ ]?"#MAKESYN".*\n {
-	char	*new_meaning;
-	char	*word_to_change;
-
-	copy_two_words_in_quotes (&new_meaning, &word_to_change);
-
-	if (!is_default_reserved_word (new_meaning)) {
-		cb_error (_("'%s' is not a default reserved word, so cannot be aliased"),
-			  new_meaning);
-	} else if (!is_reserved_word (word_to_change)) {
-		cb_error (_("'%s' is not a reserved word; you may want ADDSYN or OVERRIDE instead"),
-			  word_to_change);
-	} else {
-		remove_reserved_word_now (word_to_change);
-		add_reserved_word_now (word_to_change, new_meaning);
-	}
-
-	cobc_free (new_meaning);
-	cobc_free (word_to_change);
+	make_synonym ();
  }
 
+<*>^[ ]?"#OVERRIDE-STD".*\n {
+	add_synonym (1, 1);
+}
 <*>^[ ]?"#OVERRIDE".*\n {
-	add_synonym (1);
+	add_synonym (0, 1);
+}
+
+<*>^[ ]?"#REMOVE-STD".*\n {
+	char	*word;
+
+	copy_word_in_quotes (&word);
+	if (!is_reserved_word (word)) {
+		cb_error (_("'%s' is not a reserved word, so cannot be removed"),
+			word);
+	} else {
+		remove_reserved_word_now (word);
+	}
+	cobc_free (word);
 }
 
 <*>^[ ]?"#REMOVE".*\n {
@@ -2317,7 +2320,7 @@ copy_two_words_in_quotes (char ** const word1, char ** const word2)
 }
 
 static void
-add_synonym (const int synonym_replaces_original)
+add_synonym (const int std, const int synonym_replaces_original)
 {
 	char	*word;
 	char	*synonym;
@@ -2328,8 +2331,10 @@ add_synonym (const int synonym_replaces_original)
 		cb_error (_("'%s' is not a default reserved word, so cannot be aliased"),
 			  word);
 	} else if (is_reserved_word (synonym)) {
-		cb_error (_("'%s' is already reserved; you may want MAKESYN instead"),
-			  synonym);
+		cb_error (_("'%s' is already reserved"), synonym);
+		if (!std) {
+			cb_note (COB_WARNOPT_NONE, 0, _("you may want MAKESYN instead"));
+		}
 	} else {
 		if (synonym_replaces_original) {
 			remove_reserved_word_now (word);
@@ -2339,6 +2344,29 @@ add_synonym (const int synonym_replaces_original)
 
 	cobc_free (word);
 	cobc_free (synonym);
+}
+
+static void
+make_synonym (void)
+{
+	char* new_meaning;
+	char* word_to_change;
+
+	copy_two_words_in_quotes (&new_meaning, &word_to_change);
+
+	if (!is_default_reserved_word (new_meaning)) {
+		cb_error (_("'%s' is not a default reserved word, so cannot be aliased"),
+			new_meaning);
+	} else if (!is_reserved_word (word_to_change)) {
+		cb_error (_("'%s' is not a reserved word"), word_to_change);
+		cb_note (COB_WARNOPT_NONE, 0, _("you may want ADDSYN or OVERRIDE instead"));
+	} else {
+		remove_reserved_word_now (word_to_change);
+		add_reserved_word_now (word_to_change, new_meaning);
+	}
+
+	cobc_free (new_meaning);
+	cobc_free (word_to_change);
 }
 
 /* Global functions */
