@@ -1,4 +1,8 @@
 
+2021-10-01  Simon Sobisch <simonsobisch@gnu.org>
+
+	* ppparse.y, pplex.l, scanner.l: implementation of COBOL-WORDS directive
+
 2021-09-30  Simon Sobisch <simonsobisch@gnu.org>
 
 	* parser.y, field.c: partial merge of 2020-01-12 related to bug #513
