@@ -1,6 +1,6 @@
 NEWS - user visible changes				-*- outline -*-
 
- GnuCOBOL 3.2 to be released in September 2021
+ GnuCOBOL 3.2 to be released ... asap
 
 * New GnuCOBOL features
 
@@ -14,6 +14,8 @@ NEWS - user visible changes				-*- outline -*-
 ** New intrinsic functions
 
   BIT-OF, BIT-TO-CHAR, HEX-OF, HEX-TO-CHAR
+
+** Support of COBOL 202x directive COBOL-WORDS
 
 ** Support of additional $SET directives: ODOSLIDE
 
